--- a/estilos/sass/abstractos/_variables.scss
+++ b/estilos/sass/abstractos/_variables.scss
@@ -19,9 +19,13 @@ $t-textoTitulo: $t-textoNormal*1.2;
 
 
 // ESPACIADOS
+$alturaDeLinea:1.5;
 
 //MARGENES
+$padGral: 0.625em;
 
 //TAMAÑOS DE ELEMENTOS
 $anchoMax: 95%;
 
+// FORMULARIO DE CONTACTO
+$form1ancho: 60%;
