--- a/estilos/sass/paginas/_lenguajes.scss
+++ b/estilos/sass/paginas/_lenguajes.scss
@@ -1,8 +1,6 @@
 .lenguaje {
-    margin: auto;
-    width: $anchoMax;
-    border-bottom: 1px solid orange;
-    padding: 1em;
+
+    @include gralArticulos;
 
     & iframe {
         float: left;
