--- a/estilos/sass/abstractos/_mixins.scss
+++ b/estilos/sass/abstractos/_mixins.scss
@@ -2,3 +2,10 @@
     opacity: .75;
     transition: .5s ease;
 }
+
+@mixin gralArticulos {
+    margin: auto;
+    width: $anchoMax;
+    padding: 1em;
+    border-bottom: 1px solid $c-resaltado;
+}
