--- a/estilos/sass/base/_base.scss
+++ b/estilos/sass/base/_base.scss
@@ -1,7 +1,4 @@
-/*
-Estilos más básicos
-*/
-
+// Estilos más básicos
 
 body {
     background-color: $c-fondo;
@@ -21,7 +18,7 @@ a {
 }
 
 hr {
-    margin: 3em;
+    margin: 3 * $t-textoNormal;
     border: 1px solid $c-textoResaltado;
 }
 
@@ -29,15 +26,13 @@ hr {
     font-style: italic;
     color: $c-textoResaltado;
     height: 3.125em;
-    padding: 0.625em;
-    
+    padding: $padGral;
+
 }
 
 .p__info {
     margin: auto;
-    padding: 0.3125em;
-    line-height: 1.5;
-    width: 95%;
+    padding: calc($padGral/2);
+    line-height: $alturaDeLinea;
+    width: $anchoMax;
 }
-
-// 2DO INTENTO - POR AQUI VOY
