Añadiendo SEO al sitio, extend y map en SASS

--- a/estilos/sass/abstractos/_variables.scss
+++ b/estilos/sass/abstractos/_variables.scss
@@ -29,3 +29,10 @@ $anchoMax: 95%;
 
 // FORMULARIO DE CONTACTO
 $form1ancho: 60%;
+
+//MAP
+$coloresRedes:(
+    instagram: #ffffff,
+    facebook:#dbdbdb,
+    github:#959595
+);
